--- a/package.json
+++ b/package.json
@@ -27,14 +27,15 @@
     "@nestjs/mongoose": "^11.0.3",
     "@nestjs/platform-express": "^11.0.1",
     "@types/mongoose": "^5.11.96",
-    "class-transformer": "^0.5.1",
-    "class-validator": "^0.14.2",
+    "jose": "^6.1.0",
     "mongoose": "^8.18.2",
     "nestjs-pino": "^4.4.1",
+    "nestjs-zod": "^5.0.1",
     "pino": "^9.11.0",
     "pino-pretty": "^13.1.1",
     "reflect-metadata": "^0.2.2",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "zod": "^4.1.12"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
