--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@types/bcrypt": "^6.0.0",
     "@types/mongoose": "^5.11.96",
     "bcrypt": "^6.0.0",
+    "cookie-parser": "^1.4.7",
     "jose": "^6.1.0",
     "mongoose": "^8.18.2",
     "nestjs-pino": "^4.4.1",
@@ -50,6 +51,7 @@
     "@nestjs/cli": "^11.0.0",
     "@nestjs/schematics": "^11.0.0",
     "@nestjs/testing": "^11.0.1",
+    "@types/cookie-parser": "^1.4.10",
     "@types/express": "^5.0.0",
     "@types/jest": "^30.0.0",
     "@types/node": "^22.10.7",
