--- a/package.json
+++ b/package.json
@@ -33,19 +33,13 @@
     "@types/bcrypt": "^6.0.0",
     "@types/mongoose": "^5.11.96",
     "bcrypt": "^6.0.0",
-    "jose": "^6.1.0",
     "mongoose": "^8.18.2",
     "nestjs-pino": "^4.4.1",
-    "nestjs-zod": "^5.0.1",
-    "passport": "^0.7.0",
-    "passport-jwt": "^4.0.1",
     "pino": "^9.11.0",
     "pino-pretty": "^13.1.1",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
-    "socket.io": "^4.8.1",
-    "uuid": "^13.0.0",
-    "zod": "^4.1.12"
+    "socket.io": "^4.8.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
@@ -56,7 +50,6 @@
     "@types/express": "^5.0.0",
     "@types/jest": "^30.0.0",
     "@types/node": "^22.10.7",
-    "@types/passport-jwt": "^4.0.1",
     "@types/socket.io": "^3.0.1",
     "@types/supertest": "^6.0.2",
     "eslint": "^9.18.0",
